--- a/index.html
+++ b/index.html
@@ -377,6 +377,11 @@ Your Ad Text Here</textarea
                 class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
                 Save Landing Page
               </button>
+              <button
+                id="download-html-btn"
+                class="flex-1 justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
+                Download HTML
+              </button>
             </div>
             <div class="flex flex-col items-center">
               <h3 class="text-xl font-semibold mb-4 text-gray-800">Live Preview</h3>
