save data before apply new template

--- a/index.html
+++ b/index.html
@@ -218,10 +218,15 @@ Your Ad Text Here</textarea
                 class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
                 Save Banner
               </button>
+              <button
+                id="download-banner-btn"
+                class="flex-1 justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
+                Save as Image
+              </button>
             </div>
             <div class="flex flex-col items-center">
               <h3 class="text-xl font-semibold mb-4 text-gray-800">Live Preview</h3>
-              <div id="banner-preview-container" class="preview-area w-full h-80 flex items-center justify-center">
+              <div id="banner-preview-container" class="preview-area w-full flex items-center justify-center">
                 <div id="banner-preview" class="banner-preview-frame shadow-lg" style="width: 250px; height: 250px">
                   <p id="banner-preview-text" class="text-center p-2 break-words"></p>
                 </div>
